--- a/templates/index.html
+++ b/templates/index.html
@@ -75,17 +75,17 @@
                                 if (!found) {
                                     ok_msg = "<div class='message' id='" + data.message[0] + "'>" +
                                             "<span class='username'>" + data.username + "</span>" +
-                                            "<span class='product'>" + data.message[1] + "</span>" +
-                                            "<span class='change'>" + data.message[2] + "</span>" +
-                                            "<span class='date'>" + data.message[3] + "</span>" +
+                                            "<span class='product' id='" + data.message[2] + "'>" + data.message[1] + "</span>" +
+                                            "<span class='change'>" + data.message[3] + "</span>" +
+                                            "<span class='date'>" + data.message[4] + "</span>" +
                                             "</div>";
                                  }
                             } else {
                                 ok_msg = "<div class='message' id='" + data.message[0] + "'>" +
                                             "<span class='username'>" + data.username + "</span>" +
-                                            "<span class='product'>" + data.message[1] + "</span>" +
-                                            "<span class='change'>" + data.message[2] + "</span>" +
-                                            "<span class='date'>" + data.message[3] + "</span>" +
+                                            "<span class='product' id='" + data.message[2] + "'>" + data.message[1] + "</span>" +
+                                            "<span class='change'>" + data.message[3] + "</span>" +
+                                            "<span class='date'>" + data.message[4] + "</span>" +
                                             "</div>";
                             }
                             break;
@@ -123,6 +123,9 @@
                                 for(var i = 0; i < available_products.length; i++) {
                                     if (available_products[i].id == data.message[2]) {
                                         found = true;
+                                        if($(".count", available_products[i]).text() != data.message[1]) {
+                                            $(".count", available_products[i]).text(data.message[1]);
+                                        }
                                         break;
                                     }
                                 }
@@ -166,8 +169,6 @@
                                 "message": $(this).attr("id"),
                                 "msg_type": 7
                             }));
-                            var countspan = $(this).parent().parent().children(".count");
-                            countspan.html(parseInt(countspan.text())-1);
                         }
                         return false;
                     });
